--- a/sftp-config.json
+++ b/sftp-config.json
@@ -1,4 +1,5 @@
 {
+    //to be private
     // The tab key will cycle through the settings when first created
     // Visit http://wbond.net/sublime_packages/sftp/settings for help
     
